--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,12 @@ async-timeout==4.0.3
 attrs==23.1.0
 backoff==2.2.1
 beautifulsoup4==4.12.0
+blinker==1.8.2
 BM25==1.0.0
 certifi==2023.7.22
 chardet==5.2.0
 charset-normalizer==3.3.0
+click==8.1.7
 cloudpickle==2.2.1
 comm==0.2.1
 contourpy==1.2.0
@@ -26,6 +28,8 @@ distro==1.9.0
 exceptiongroup==1.2.0
 executing==2.0.1
 filelock==3.12.4
+Flask==3.0.3
+Flask-Cors==5.0.0
 fonttools==4.47.0
 frozenlist==1.4.0
 fsspec==2023.6.0
@@ -40,11 +44,14 @@ huggingface-hub==0.17.3
 idna==3.4
 ipykernel==6.28.0
 ipython==8.19.0
+itsdangerous==2.2.0
 jedi==0.19.1
+Jinja2==3.1.4
 jupyter_client==8.6.0
 jupyter_core==5.7.0
 kiwisolver==1.4.5
 Markdown==3.5
+MarkupSafe==2.1.5
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
 multidict==6.0.4
@@ -96,5 +103,7 @@ typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.6
 wcwidth==0.2.12
+Werkzeug==3.0.4
 xxhash==3.4.1
 yarl==1.9.2
+gunicorn==20.1.0
