--- a/requirements.txt
+++ b/requirements.txt
@@ -107,3 +107,7 @@ Werkzeug==3.0.4
 xxhash==3.4.1
 yarl==1.9.2
 gunicorn==20.1.0
+google-auth 
+google-auth-oauthlib
+google-auth-httplib2 
+google-api-python-client
