--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-aiohttp==3.8.6
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
 aiolimiter==1.1.0
 aioredis==2.0.1
 aiosignal==1.3.1
 annotated-types==0.7.0
-anthropic==0.21.3
+anthropic==0.49.0
 anyio==4.9.0
 asttokens==2.4.1
 astunparse==1.6.3
@@ -27,9 +28,10 @@ debugpy==1.8.0
 decorator==5.1.1
 dill==0.3.7
 distro==1.9.0
+eval_type_backport==0.2.2
 exceptiongroup==1.2.0
 executing==2.0.1
-filelock==3.12.4
+filelock==3.18.0
 Flask==3.0.3
 Flask-Cors==5.0.0
 fonttools==4.47.0
@@ -58,19 +60,23 @@ ipython==8.19.0
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
+jiter==0.9.0
 jupyter_client==8.6.0
 jupyter_core==5.7.0
 kiwisolver==1.4.5
+linecache2==1.0.0
 Markdown==3.5
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 multidict==6.0.4
 multiprocess==0.70.15
 nest-asyncio==1.5.8
 numpy==1.26.0
 oauthlib==3.2.2
-openai==1.9.0
+openai==1.71.0
 openlimit==0.3.0
 packaging==23.2
 pandas==2.1.1
@@ -78,9 +84,10 @@ parse==1.19.1
 parso==0.8.3
 pexpect==4.9.0
 pickleshare==0.7.5
-pillow==10.2.0
+pillow==11.1.0
 platformdirs==4.1.0
 prompt-toolkit==3.0.43
+propcache==0.3.1
 proto-plus==1.26.1
 protobuf==6.30.2
 psutil==5.9.7
@@ -106,25 +113,33 @@ rank-bm25==0.2.2
 regex==2023.10.3
 requests==2.31.0
 requests-oauthlib==2.0.0
+rich==13.9.4
 rsa==4.9
 scipy==1.11.4
 seaborn==0.13.1
+shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
+sseclient-py==1.8.0
 stack-data==0.6.3
+tabulate==0.9.0
 tiktoken==0.5.1
+together==1.5.5
 tokenizers==0.15.2
 tornado==6.4
-tqdm==4.66.1
+tqdm==4.67.1
+traceback2==1.4.0
 traitlets==5.14.0
+typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.1
 tzdata==2023.3
+unittest2==1.1.0
 uritemplate==4.1.1
 urllib3==2.0.6
 wcwidth==0.2.12
 websockets==15.0.1
 Werkzeug==3.0.4
 xxhash==3.4.1
-yarl==1.9.2
+yarl==1.19.0
